[package]
name = "ping-pong"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_asset_loader = "0.23.0"
bevy_rapier2d = "0.30.0"
mathx = "1.1.0"

[profile.dev]
debug = 1
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

